--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-minify": "^2.1.0",
     "gulp-notify": "^3.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0"
   }
 }
