--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "gulp-autoprefixer": "^4.1.0",
     "gulp-minify": "^2.1.0",
     "gulp-notify": "^3.2.0",
+    "gulp-plumber": "^1.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
-    "gulp-uglify": "^3.0.0"
+    "gulp-uglify": "^3.0.0",
+    "plumber": "^0.4.8"
   }
 }
